# MWB-sgraph

./: CMakeLists.txt  README.md  build.sh  run.sh  v-run.sh
src/: ExecutionController.cpp  ExecutionController.h  Graph.h  Makefile  OpenMP.cpp  OpenMP.h  Sequential.cpp  Sequential.h  main.cpp
